--- a/port.html
+++ b/port.html
@@ -22,15 +22,11 @@
                 </ul>
             </nav>
             <div class="detel">
-                <h1>I am Siddhi <span>Ingale</span></h1>
+                <h1>I am Tejas <span>Adagale</span></h1>
                 <p>This is my official portfolio website to show all 
                     <br>Details and work experiences of mine.
                 </p>
-                <a href="images/cv.pdf">DOWNLOAD CV</a>
-            </div>
-            <div class="images">
-                <img src="images/logo.png" class="shape">
-                <img src="images/sid.png" class="girl">
+                <a href="Tejas_Adagale_Resume.pdf">DOWNLOAD CV</a>
             </div>
         </div>
     </body>
